--- a/clientside/css/index.css
+++ b/clientside/css/index.css
@@ -1,22 +1,62 @@
 *{
     margin: 0;
     padding: 0;
-}
-
-.nav{
-    width: 100%;
-    height: 9vh;
-    background-color: aquamarine;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-}
-.right{
-    width: 20%;
-}
-.right ul{
-    display: flex;
-    align-items: center;
-    justify-content: space-evenly;
-    list-style-type: none;
-}
+    }
+    .navbar{
+        height: 10vh;
+        width: 100%;
+        display: flex;
+        justify-content: space-evenly;
+        align-items: center;
+        background-color: rgba(0, 0, 0, 0.053);
+    }
+    .navbar img{
+        width: 50px;
+    }
+    .dropdown{
+        height: 5vh;
+        width: 38px;
+        background-color: rgba(3, 1, 1, 0.292);
+        border-radius: 50px;
+        position: relative;
+    }
+    .down{
+        position: absolute;
+        top: 130%;
+        right: 2%;
+        height: 250px;
+        width: 250px;
+        border: 1px solid red;
+    }
+    .up{
+        position: absolute;
+        top: 22%;
+    }
+    .image{
+        height: 30%;
+        width: 100%;
+    }
+    .buttons{
+        height: 70%;
+        width: 100%;
+    }
+    .buttons button{
+        width: 100%;
+        height: 20%;
+        margin-bottom: 15%;
+    }
+    .navbar input{
+        width: 50%;
+        height: 5vh;
+        border: 2px solid black;
+    }
+    .search{
+        display: flex;
+        align-items: center;
+        width: 79%;
+    }
+    .search img{
+        background-color: black;
+        height: 5.46vh;
+        width: 40px;
+    }
