--- a/clientside/css/index.css
+++ b/clientside/css/index.css
@@ -13,37 +13,81 @@
     .navbar img{
         width: 50px;
     }
-    .dropdown{
-        height: 5vh;
-        width: 38px;
-        background-color: rgba(3, 1, 1, 0.292);
+    .navbar button{
+        padding: 10px 15px;
         border-radius: 50px;
+        font-weight: bolder;
+        border: 5px solid orange;
+    }
+    .container {
         position: relative;
+        display: inline-block;
+        display: flex;
     }
-    .down{
+    
+    .profile-image {
+        width: 50px;
+        height: 50px;
+        background-color: rgba(3, 1, 1, 0.292);
+        cursor: pointer;
+        border-radius: 50%;
+        object-fit: cover;
+    }
+    .profile-image img{
+        height: 100%;
+        width: 100%;
+        border-radius: 50%;
+    }
+    
+    .dropdown {
+        display: none;
+        height: 200px;
+        width: 200px;
         position: absolute;
-        top: 130%;
+        background-color: white;
+        border: 1px solid #ccc;
+        box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+        z-index: 1;
         right: 2%;
-        height: 250px;
-        width: 250px;
-        border: 1px solid red;
+        
     }
-    .up{
-        position: absolute;
-        top: 22%;
+    .dropdown img{
+        display: block;
+        height: 22%;
+        width: 22%;
+        border-radius: 50%;
+        padding: 12px 12px;
+        cursor: pointer;
+        margin-left: 34%;
+    
+    }
+    .dropdown img:hover{
+        background-color: #f1f1f1;
+    }
+    .dropdown-option {
+        padding: 10px 15px;
+        cursor: pointer;
+    }
+    
+    .dropdown-option:hover {
+        background-color: #f1f1f1;
     }
     .image{
         height: 30%;
         width: 100%;
     }
-    .buttons{
-        height: 70%;
-        width: 100%;
-    }
-    .buttons button{
+
+     .dropdown button{
         width: 100%;
         height: 20%;
-        margin-bottom: 15%;
+        padding: 10px 15px;
+        border-radius: 50px;
+        font-weight: bolder;
+        background-color: rgb(25, 77, 25);
+        border: 1px solid rgb(25, 77, 25);
+        border-radius: 4px;
+        color: white;
+        /* margin-bottom: 15%; */
     }
     .navbar input{
         width: 50%;
@@ -59,4 +103,7 @@
         background-color: black;
         height: 5.46vh;
         width: 40px;
+    }
+    .btns{
+        margin-left: 15%;
     }
