--- a/clientside/css/signup.css
+++ b/clientside/css/signup.css
@@ -7,7 +7,7 @@ body {
 
 .container {
     width: 400px;
-    height: 500px;
+    height: auto;
     margin: 50px auto;
     padding: 20px;
     background-color: #fff;
@@ -82,4 +82,13 @@ input[type="password"]:focus {
 
 .login-link a:hover {
     text-decoration: underline;
+}
+.prf{
+    width: 150px;
+    height: 150px;
+}
+.prf img{
+    width: 100%;
+    height: 100%;
+    margin: auto;
 }
