--- a/clientside/css/profile.css
+++ b/clientside/css/profile.css
@@ -24,6 +24,8 @@
     height: 250px;
     border-radius: 50%;
     object-fit: cover;
+    background-position: center;
+    background-size: cover;
 
 }
 .left h2{
