--- a/clientside/css/profile.css
+++ b/clientside/css/profile.css
@@ -91,3 +91,34 @@
     text-decoration: none;
     color: black;
 }
+.navbar{
+    height: 10vh;
+    width: 100%;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+.navbar img{
+    width: 50px;
+}
+.navbar input{
+    width: 50%;
+    height: 5vh;
+    border: 2px solid black;
+}
+.navbar button{
+    padding: 10px 15px;
+    border-radius: 50px;
+    font-weight: bolder;
+    border: 5px solid orange;
+}
+.search{
+    display: flex;
+    align-items: center;
+    width: 79%;
+}
+.search img{
+    background-color: black;
+    height: 5.46vh;
+    width: 40px;
+}
