--- a/clientside/css/index.css
+++ b/clientside/css/index.css
@@ -122,6 +122,7 @@
         margin-top: 2%;
         padding: 1%;
         border-radius: 8px;
+        position: relative;
     }
     .prods img{
         text-align: center;
@@ -136,6 +137,7 @@
         text-align: center;
 
        width: 200px;
+       height: 100px;
     }
     .products a{
         text-decoration: none;
@@ -143,4 +145,15 @@
     }
     .content h1{
         color: orange;
+    }
+    .hearts{
+        width: 50px;
+        height: 50px;
+        position: absolute;
+        right: 1%;
+        bottom: 2%;
+    }
+    .hearts img{
+        width: 40px;
+        height: 40px;
     }
