--- a/clientside/css/product.css
+++ b/clientside/css/product.css
@@ -123,3 +123,6 @@ a{
     text-align: center;
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif ;
 }
+.book{
+    text-align: center;
+}
