--- a/clientside/css/profile.css
+++ b/clientside/css/profile.css
@@ -130,3 +130,10 @@ input,textarea,select {
     box-sizing: border-box;
     font-size: 14px;
 }
+.button{
+    margin-right: 2%;
+}
+.button a{
+    text-decoration: none;
+    color: black;
+}
