--- a/clientside/css/profile.css
+++ b/clientside/css/profile.css
@@ -133,7 +133,7 @@ input,textarea,select {
 .button{
     margin-right: 2%;
 }
-.button a{
+button a{
     text-decoration: none;
     color: black;
 }
